Corrected Phone No. in the Footer

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,10 +23,19 @@
             integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="./preLoader.css" />
         <title>Shubham | Web Developer</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
+        <div id="root">
+            <div class="preLoader">
+                <div class="contentWrapper">
+                    <img src="./heart-loader.gif" alt="heart-loader" />
+                    <h1>be calm!</h1>
+                    <p>You are going to land on the coolest portfolio very soon.</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
