username in title tag ADDED

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,14 +30,19 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="./preLoader.css" />
-        <title>Shubham Kumar Singh | Web Developer | shubhamm.in | VeNoM</title>
+        <title>
+            Shubham Kumar Singh | Web Developer | shubhamm.in | VeNoM | kumarsks619
+        </title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root">
             <div class="preLoader">
                 <div class="contentWrapper">
-                    <img src="./heart-loader.gif" alt="Shubham Kumar Singh - Heart Preloader" />
+                    <img
+                        src="./heart-loader.gif"
+                        alt="Shubham Kumar Singh - Heart Preloader"
+                    />
                     <h1>be calm!</h1>
                     <p>You are going to land on the coolest portfolio very soon.</p>
                 </div>
