Client - projects github link ADDED | projects duration REMOVED

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,7 +41,7 @@
                 <div class="contentWrapper">
                     <img
                         src="./heart-loader.gif"
-                        alt="Shubham Kumar Singh - Heart Preloader"
+                        alt="kumarsks619 Heart Preloader"
                     />
                     <h1>be calm!</h1>
                     <p>You are going to land on the coolest portfolio very soon.</p>
