Replace onclick handlers with proper links and migrated responsive css to corresponding components css

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,8 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
 
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
             rel="stylesheet"
@@ -39,10 +40,7 @@
         <div id="root">
             <div class="preLoader">
                 <div class="contentWrapper">
-                    <img
-                        src="./heart-loader.gif"
-                        alt="kumarsks619 Heart Preloader"
-                    />
+                    <img src="./heart-loader.gif" alt="kumarsks619 Heart Preloader" />
                     <h1>be calm!</h1>
                     <p>You are going to land on the coolest portfolio very soon.</p>
                 </div>
