software engineer naming changes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,63 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <meta name="theme-color" content="#000000" />
-        <meta
-            name="description"
-            content="Portfolio of Shubham Kumar Singh, a Web Developer. I'm a Mechanical Engineer by degree, graduated from National Institute of Technology Jalandhar, but love to do coding and build alive websites that feels like a person sitting beside narrating a story to you."
-        />
-        <meta
-            name="keywords"
-            content="WEB DEVELOPER, WEBSITE DEVELOPER, REACT, NODE, HTML, CSS, JAVASCRIPT, SHUBHAM KUMAR SINGH, NIT JALANDHAR, NITJ, KUMARSKS619, PORTFOLIO, VENOM"
-        />
-        <meta name="author" content="Shubham Kumar Singh | VeNoM" />
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<meta name="theme-color" content="#000000" />
+		<meta name="description" content="Portfolio of Shubham Kumar Singh, a Software Engineer. I'm a Mechanical Engineer by degree, graduated from National Institute of Technology Jalandhar, but love to do coding and build alive websites that feels like a person sitting beside narrating a story to you." />
+		<meta name="keywords" content="SOFTWARE ENGINEER, FRONTEND ENGINEER, WEB DEVELOPER, WEBSITE DEVELOPER, REACT, NODE, HTML, CSS, JAVASCRIPT, SHUBHAM KUMAR SINGH, NIT JALANDHAR, NITJ, KUMARSKS619, PORTFOLIO, VENOM" />
+		<meta name="author" content="Shubham Kumar Singh | VeNoM" />
 
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
-            rel="stylesheet"
-        />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-            crossorigin="anonymous"
-        />
-        <link rel="stylesheet" href="./preLoader.css" />
-        <title>
-            Shubham Kumar Singh | Web Developer | shubhamm.in | VeNoM | kumarsks619
-        </title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root">
-            <div class="preLoader">
-                <div class="contentWrapper">
-                    <img src="./heart-loader.gif" alt="kumarsks619 Heart Preloader" />
-                    <h1>be calm!</h1>
-                    <p>You are going to land on the coolest portfolio very soon.</p>
-                </div>
-                <div class="seo-only">
-                    <h1>Shubham Kumar Singh</h1>
-                    <h1>Shubham Portfolio Website</h1>
-                    <h1>VeNoM</h1>
-                    <h1>Web Developer</h1>
-                    <h1>Website Developer</h1>
-                    <h1>NIT Jalandhar</h1>
-                    <h1>NITJ</h1>
-                    <h1>Mechanical Engineer</h1>
-                    <h1>kumarsks619</h1>
-                    <h1>shubhamm.in</h1>
-                    <h1>https://www.shubhamm.in/</h1>
-                </div>
-            </div>
-        </div>
-    </body>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+		<link rel="stylesheet" href="./preLoader.css" />
+		<title>Shubham Kumar Singh | Software Engineer | shubhamm.in | VeNoM | kumarsks619</title>
+	</head>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root">
+			<div class="preLoader">
+				<div class="contentWrapper">
+					<img src="./heart-loader.gif" alt="kumarsks619 Heart Preloader" />
+					<h1>be calm!</h1>
+					<p>You are going to land on the coolest portfolio very soon.</p>
+				</div>
+				<div class="seo-only">
+					<h1>Shubham Kumar Singh</h1>
+					<h1>Shubham Portfolio Website</h1>
+					<h1>VeNoM</h1>
+					<h1>Software Engineer</h1>
+					<h1>Website Developer</h1>
+					<h1>NIT Jalandhar</h1>
+					<h1>NITJ</h1>
+					<h1>Mechanical Engineer</h1>
+					<h1>kumarsks619</h1>
+					<h1>shubhamm.in</h1>
+					<h1>https://www.shubhamm.in/</h1>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
